[package]
name = "rscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-lto]
inherits="release"
lto = true
opt-level =3
overflow-checks = true
debug=false
codegen-units=256

[dependencies]
reqwest = { version = "0.12.1", features = ["json","socks"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.37"
futures = "0.3.30"
html5ever = "0.27.0"
select = "0.6.0"
colored = "2.1.0"
tokio-stream = "0.1.15"
clap = { version = "4.5.4", features=["derive"] }
rand = "0.9.0-alpha.1"
md5 = "0.7.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"